@@ -27,7 +27,7 @@ if {[file exists ${_defaultsfile}] == 0} {
 source ${_defaultsfile};
 unset _defaultsfile;
 
-# nbspd.init is needed for nbspd.status
+# nbspd.init is needed for the stats files and variables (log periods)
 set nbspd_init_file [file join $common(libdir) nbspd.init];
 if {[file exists $nbspd_init_file] == 0} {
     puts "$nbspd_init_file not found.";
@@ -43,6 +43,9 @@ set argc [llength $argv];
 set fmt $option(f);
 set qstatefile $nbspd(qstatelogfile);
 set statusfile $nbspd(statusfile);
+#
+set nbspstats_logperiod_secs $nbspd(nbspstats_logperiod_secs);
+set qstate_logperiod_secs $nbspd(qstate_logperiod_secs);
 
 if {$option(q) ne ""} {
     set qstatefile $option(q);
@@ -52,39 +55,43 @@ if {$option(s) ne ""} {
     set statusfile $option(s);
 }
 
+# The data is prepended by meta data (log periods)
+set keywords [list "nbspstats_logperiod_secs" "qstate_logperiod_secs"];
+set values [list $nbspstats_logperiod_secs $qstate_logperiod_secs];
+
 #
 # These are the fields of the nbspd.status file, followed by the 
 # nbspd.qstate file.
 #
-set keywords [list \
-unix_seconds \
-frames_received \
-frames_processed \
-frames_jumps \
-frames_bad \
-frames_data_size \
-products_transmitted \
-products_completed \
-products_missed \
-products_retransmitted \
-products_retransmitted_complete \
-products_retransmitted_processed \
-products_retransmitted_ignored \
-products_retransmitted_recovered \
-products_rejected \
-products_aborted \
-products_bad \
-queue_processor \
-queue_filter \
-queue_server];
+lappend keywords nbspstats_unix_seconds \
+    frames_received \
+    frames_processed \
+    frames_jumps \
+    frames_bad \
+    frames_data_size \
+    products_transmitted \
+    products_completed \
+    products_missed \
+    products_retransmitted \
+    products_retransmitted_complete \
+    products_retransmitted_processed \
+    products_retransmitted_ignored \
+    products_retransmitted_recovered \
+    products_rejected \
+    products_aborted \
+    products_bad \
+    qstate_unix_seconds \
+    queue_processor \
+    queue_filter \
+    queue_server;
 
-set qvalues [split [exec tail -n 1 $qstatefile]];
 set svalues [split [exec tail -n 1 $statusfile]];
-set values [concat $svalues [lrange $qvalues 1 end]];
+set qvalues [split [exec tail -n 1 $qstatefile]];
+set values [concat $values $svalues $qvalues];
 
 if {$fmt eq "std" } {    
     puts {#
-# nbsp counters in the last minute (ending at "unix_seconds").
+# nbsp counters in the last period (ending at "unix_seconds").
 #
 DATA_START};
 
