@@ -84,5 +84,8 @@
   (for use remotely in, e.g., collectd, rrdtool, npstats)
 - Added nbspreconfigure script
 - Added nbspstats script
-- Revised msgfilter: convert crlf -> nl, corrected REAME, added options
+- Revised msgfilter: convert crlf -> nl, corrected README, added options
   for smtp when needed.
+- Added output of logperiods (for stats and qstate) in nbspstatcounters
+  and in the "_inbsp/stats" web interface. The script nbspstats was revised
+  to accept a "-p <logperiod>" option.
